src/objects/Product_Defect__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>Defect__c</fullName>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Product Defects</relationshipLabel>
        <relationshipName>Product_Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Defect_Id__c</fullName>
        <label>Product Defect Id</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product Defects</relationshipLabel>
        <relationshipName>Product_Defects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Defect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>